--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Something went wrong on our servers...(500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -58,9 +58,9 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>Something went wrong on our servers, our apologies!</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>If it's your fault, please feel free to send us an apology letter. If it's our fault, please let us know and we'll try to fix it. Many thanks!</p>
   </div>
 </body>
 </html>
